# docs/swagger.json
@@ -65,6 +65,11 @@
         },
         "/tasks": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "List tasks",
                 "consumes": [
                     "application/json"
@@ -107,6 +112,11 @@
                 }
             },
             "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Create new task",
                 "consumes": [
                     "application/json"
@@ -156,6 +166,11 @@
         },
         "/tasks/{id}/finished": {
             "patch": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Mark task as finished",
                 "consumes": [
                     "application/json"
@@ -203,6 +218,11 @@
         },
         "/users": {
             "post": {
+                "security": [
+                    {
+                        "BasicAuth": []
+                    }
+                ],
                 "description": "Create new user account (for role manager use 1 and for technician use 2)",
                 "consumes": [
                     "application/json"
@@ -340,6 +360,17 @@
                     "type": "string"
                 }
             }
+        }
+    },
+    "securityDefinitions": {
+        "BasicAuth": {
+            "type": "basic"
+        },
+        "BearerAuth": {
+            "description": "Type \"Bearer\" followed by a space and JWT token.",
+            "type": "apiKey",
+            "name": "Authorization",
+            "in": "header"
         }
     }
 }
